# Codebeat

./: .env  .gitignore  CMakeLists.txt  README.md  build_corpus.sh  face_auth.sh  imgui.ini  install_autostart.sh  repl.sh  run_gui.sh  train.sh  uninstall_autostart.sh  voice_recognize.sh
cmake/: .gitkeep
data/processed/: .gitkeep  face_profile.npz
data/raw/: .gitkeep  corpus.txt
data/raw/knowledge/: coding_workflow.txt  commands.txt  core.txt  safety.txt  voice_face.txt
data/raw/plugins/: commands.json
engine/: autodiff.hpp  ops.hpp  optim.hpp  rng.hpp  serialize.hpp  tensor.hpp
gui/: gui_main.cpp  main_window.cpp  main_window.h
include/: brain.h  response.h  voice.h
models/: ctc_asr.hpp  tokenizer.hpp  transformer.hpp
runtime/: face_auth.py  face_enroll.py  gui_main.cpp  mainwindow.cpp  mainwindow.hpp  memory.hpp  planner.hpp  repl.cpp  splash.cpp  splash.hpp  tools.hpp  voice_profile.py
safety/: guard.hpp
src/: brain.cpp  main.cpp  response.cpp  voice.cpp
training/: dataset.hpp  lm_train.cpp  trainer.hpp
